lab1/Test/L1-A-12-95.cmm
int itdBQA ( ) {
  Jt3bCMxR2eVSBxfW ;
  if ( JuvH )   CNpNvMmJ ;
else   if ( F62MJUQl30NUcheQGw6E )   eEW1reD ;


}
int ;
int ( ) {
  if ( ZyjfwWePidENfADzZEVV )   pvZSVnMmyImWwfyA5PJ7 
    ;
else   Qiz ;

  while ( U ) {
    if ( BCs35z2VPlQ3U1IcO     while ( H5ettKquaE69drco 
      )     while ( AU_XC )     if ( ueZIfYl3oiQIsSgoy ) 
          if ( yWdZuhgLbqqLU )     pBXj8Bnk8ao0 ;
else     l1vhNTga1ifECV ;

else     N5WjDi3KF1 ;



else     return Y ;

  }
}
int qygml6i1YHiL1HRL ( ) {
}
int ;
int foLBtW4NqS5 ( struct {
  int CLpiGW72n7dKVdO ;
  int Q81qpRMQTItkmqXiz ;
  struct {
  }XeIzWc7KXDItY_vA ;
  struct w48 pL6_5ouGXPsLheE8M ;
}BkkM_OhG9pfEO , int ) {
}
struct yVDtLXP0wtRRUgI {
  struct DMCb8fSGc LEPpSYDIM5f2wKPM , Vpj6eOf5LFQqmX 
    ;
}Zb6EQPDVjKdzGxRRRSD ( ) {
  int h1rLG2ZDX = HkBo5xC8Wk `;
  if ( fC_jZgWwuBhGoU )   WyQpYrcs5fs8Xde = dVMeQNuGs 
    <= eU_SEN - t36uj1dhS_n / - fIsEz ( tY || lciOkVsjAfAKWoof 
    && I0M1 + A [ eFV_UhpEvtwb && ar8Wr_I9757_1 != ( pSEOk1Xd5Wx5tqAAG 
    || Q3k < YILyp4CKFkL0 * XSCoirKq5aPsa_ [ n1VPgCB8VpZXGH3 
    || UNg7gOQSaOde_T == xjN2 - KzHpG11r / J9ByZgnAGIVRt6TArBt 
    ( SV4Z6Y8vUsIKsz , butRk6LAhqD6h1vb_C_ ) > ! 1768556671 
    - BR2iqR . QfWop7 ] . SJeXVtLBAnegfOU ) ] >= ogXP6KGuV 
    ( ) * ! 261654882.1984780365 . ThccV_qw ) ;

}
float af , oefIvY4K_f [ 135016668 ] 

;
struct p1SqD5s ;
